# mist

./: .gitignore  CHANGELOG.md  CLAUDE(AegisAI).md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md  FILE_ENCRYPTION.md  FRIEND_SYSTEM.md  FUTURE_ROADMAP.md  HANDOVER.md  I18N.md  PAYMENT.md  SYSTEM_DESIGN.md
rust-core/: Cargo.toml
rust-core/src/: lib.rs
rust-core/src/crypto/: aes.rs  keys.rs  mod.rs  ratchet.rs  x3dh.rs
rust-core/src/network/: mod.rs
rust-core/src/storage/: mod.rs
server/: docker-compose.yml
server/caddy/: Caddyfile
server/coturn/: turnserver.conf
server/emqx/: emqx.conf
src/: App.tsx  index.css  main.tsx
src/components/ChatRoom/: ChatInput.tsx  ChatRoom.tsx  MessageBubble.tsx
src/components/DevTools/: E2ESimulator.tsx  LiveTestPanel.tsx  QRCodeExchange.tsx  index.ts  (+1 more)
src/hooks/: index.ts  useChat.ts  useCrypto.ts  useMqtt.ts  useVerification.ts  useWebAuthn.ts  useWebRTC.ts
src/pages/: AuthScreen.tsx  ChatApp.tsx  DevToolsPage.tsx  WeatherApp.tsx
src/providers/: AppProvider.tsx  index.ts
src/services/: auth.ts  crypto.ts  index.ts  mqtt.ts  storage.ts  verification.ts  webauthn.ts  webrtc.ts
src/stores/: botStore.ts  chatStore.ts
src/types/: index.ts  qrcode.d.ts
src/wasm/: pkg && cp cUserswg444safetalkrust-corepkgsafetalk_core.js cUserswg444safetalksrcwasmpkg  pkg && cp cUserswg444safetalkrust-corepkgsafetalk_core_bg.wasm.d.ts cUserswg444safetalksrcwasmpkg
(+15 files in other folders)
