[package]
name = "safetalk-core"
version = "0.1.0"
edition = "2021"
authors = ["SafeTalk Team"]
description = "SafeTalk E2EE Core Library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM 綁定
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# 加密
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# 工具
thiserror = "1.0"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "js"] }
bincode = "1.3"
curve25519-dalek = "4.1"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
